Update authenticate and handle exception not found

--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 POSTGRES_DB=nestjs
 PORT=3000
-JWT_SECRET='falco'
-JWT_EXPIRATION_TIME=60*60
+JWT_SECRET=falco
+JWT_EXPIRATION_TIME=3600
